// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Texts > should render correctly (snapshot) 1`] = `
<div>
  <a
    class="ant-typography mdx-hash-link _anchor_be8fe3"
  >
    Text
  </a>
</div>
`;

exports[`Texts > should render correctly (snapshot) 2`] = `
<div>
  <span
    class="ant-typography dark:text-light"
  >
    <strong>
      Text
    </strong>
  </span>
</div>
`;

exports[`Texts > should render correctly (snapshot) 3`] = `
<div>
  <span
    class="ant-typography dark:text-light"
  >
    <i>
      Text
    </i>
  </span>
</div>
`;

exports[`Texts > should render correctly (snapshot) 4`] = `
<div>
  <span
    class="ant-typography dark:text-light"
  >
    <del>
      Text
    </del>
  </span>
</div>
`;
